--- a/sample-js/index.html
+++ b/sample-js/index.html
@@ -47,10 +47,19 @@ document.getElementById("demo").innerHTML = `<div style="    margin-left: auto;
     
   }
   </script>
-     <div class="one" onclick = "myFunction()">
-      <a href="#"><button class="round-icon">Capture a pokemon<span class="vl"></span><i class="fa fa-download" aria-hidden="true"></i></button></a>
-  </div>
+    <div class="vertical-center">
+    <button class="captureButton" onClick="myFunction()" style="background-color: lightcoral; /* Green */
+    border: none;
+    color: white;
 
+    align-items: center;
+    margin: auto;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 36px;">Capture a pokemon<span class="vl"></span><i class="fa fa-download" aria-hidden="true"></i></button></a>
+ </div>
 <p id="demo" style=""></p>
   </body>
 </html>
